# pipe-func

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
pipe_func/: __init__.py  core.py
tests/: test_pipe_func.py
